[gd_scene load_steps=30 format=2]

[ext_resource path="res://colworld.gd" type="Script" id=1]
[ext_resource path="res://obstacle.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://ghost.gd" type="Script" id=4]
[ext_resource path="res://moving_platform2.gd" type="Script" id=5]
[ext_resource path="res://princess.png" type="Texture" id=6]
[ext_resource path="res://youwin.gd" type="Script" id=7]
[ext_resource path="res://youwin2.gd" type="Script" id=8]
[ext_resource path="res://oneway1.gd" type="Script" id=9]
[ext_resource path="res://oneway6.gd" type="Script" id=10]
[ext_resource path="res://oneway10.gd" type="Script" id=11]
[ext_resource path="res://oneway2.gd" type="Script" id=12]
[ext_resource path="res://oneway5.gd" type="Script" id=13]
[ext_resource path="res://oneway3.gd" type="Script" id=14]
[ext_resource path="res://oneway7.gd" type="Script" id=15]
[ext_resource path="res://oneway4.gd" type="Script" id=16]
[ext_resource path="res://oneway8.gd" type="Script" id=17]
[ext_resource path="res://oneway12.gd" type="Script" id=18]
[ext_resource path="res://oneway13.gd" type="Script" id=19]
[ext_resource path="res://oneway15.gd" type="Script" id=20]
[ext_resource path="res://oneway14.gd" type="Script" id=21]
[ext_resource path="res://oneway16.gd" type="Script" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="TileSet" id=2]
0/name = ""
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 0, 0 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 8, 8 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
resource_name = "leftright"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 275, 200 ), Vector2( 275, 200 ), Vector2( 275, 100 ), Vector2( 275, 100 ) ]
}

[sub_resource type="Animation" id=5]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 275, 200 ), Vector2( 275, 200 ), Vector2( 275, 100 ), Vector2( 275, 100 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 4 )

[node name="colworld" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655380, 0, 0, 655381, 0, 0, 655391, 0, 0, 655392, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720916, 0, 0, 720917, 0, 0, 720927, 0, 0, 720928, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786452, 0, 0, 786453, 0, 0, 786463, 0, 0, 786464, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983068, 0, 0, 983072, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048599, 0, 0, 1048604, 0, 0, 1048608, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114135, 0, 0, 1114140, 0, 0, 1114144, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179671, 0, 0, 1179676, 0, 0, 1179680, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245216, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310733, 0, 0, 1310734, 0, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310752, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441819, 0, 0, 1441820, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572895, 0, 0, 1572896, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703961, 0, 0, 1703962, 0, 0, 1703967, 0, 0, 1703968, 0, 0, 1769472, 0, 0, 1769473, 0, 0, 1769493, 0, 0, 1769494, 0, 0, 1769497, 0, 0, 1769498, 0, 0, 1769501, 0, 0, 1769502, 0, 0, 1769503, 0, 0, 1769504, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835029, 0, 0, 1835030, 0, 0, 1835033, 0, 0, 1835034, 0, 0, 1835037, 0, 0, 1835038, 0, 0, 1835039, 0, 0, 1835040, 0, 0, 1900544, 0, 0, 1900545, 0, 0, 1900546, 0, 0, 1900547, 0, 0, 1900548, 0, 0, 1900549, 0, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0, 1900555, 0, 0, 1900556, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 0, 0, 1900561, 0, 0, 1900562, 0, 0, 1900563, 0, 0, 1900564, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 1900576, 0, 0, 1966080, 0, 0, 1966081, 0, 0, 1966082, 0, 0, 1966083, 0, 0, 1966084, 0, 0, 1966085, 0, 0, 1966086, 0, 0, 1966087, 0, 0, 1966088, 0, 0, 1966089, 0, 0, 1966090, 0, 0, 1966091, 0, 0, 1966092, 0, 0, 1966093, 0, 0, 1966094, 0, 0, 1966095, 0, 0, 1966096, 0, 0, 1966097, 0, 0, 1966098, 0, 0, 1966099, 0, 0, 1966100, 0, 0, 1966101, 0, 0, 1966102, 0, 0, 1966103, 0, 0, 1966104, 0, 0, 1966105, 0, 0, 1966106, 0, 0, 1966107, 0, 0, 1966108, 0, 0, 1966109, 0, 0, 1966110, 0, 0, 1966111, 0, 0, 1966112, 0, 0 )

[node name="player" parent="." groups=[
"reset",
"player",
] instance=ExtResource( 3 )]
position = Vector2( 72.06, 436.436 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 2

[node name="Camera2D2" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = 0
limit_top = 0
limit_right = 520
limit_bottom = 500

[node name="ghost" parent="." groups=[
"reset",
"player",
] instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( -84.94, 414.436 )
scale = Vector2( 0.25, 0.25 )
collision_layer = 2
script = ExtResource( 4 )

[node name="moving_platform2" type="KinematicBody2D" parent="." groups=[
"reset",
]]
position = Vector2( 88.3493, 296 )
script = ExtResource( 5 )

[node name="collision" type="CollisionShape2D" parent="moving_platform2"]
shape = SubResource( 3 )

[node name="sprite" type="Sprite" parent="moving_platform2"]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="moving_platform2"]
autoplay = "updown"
playback_process_mode = 0
anims/leftright = SubResource( 4 )
anims/updown = SubResource( 5 )

[node name="princess" type="Area2D" parent="."]
position = Vector2( 487.45, 327.55 )

[node name="collision" type="CollisionShape2D" parent="princess"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="princess"]
texture = ExtResource( 6 )

[node name="button2" type="Area2D" parent="."]
position = Vector2( 374.4, 206.9 )

[node name="collision" type="CollisionShape2D" parent="button2"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="button2"]
texture = ExtResource( 6 )

[node name="button3" type="Area2D" parent="."]
position = Vector2( 346.85, 124.25 )

[node name="collision" type="CollisionShape2D" parent="button3"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="button3"]
texture = ExtResource( 6 )

[node name="button1" type="Area2D" parent="."]
position = Vector2( 449.45, 464.35 )

[node name="collision" type="CollisionShape2D" parent="button1"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="button1"]
texture = ExtResource( 6 )

[node name="youwin" type="Label" parent="." groups=[
"reset",
]]
visible = false
margin_left = 196.0
margin_top = 41.0
margin_right = 344.0
margin_bottom = 67.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Oh no
The lab is exploding"
align = 1
script = ExtResource( 7 )

[node name="youwin2" type="Label" parent="." groups=[
"reset",
]]
visible = false
margin_left = 307.911
margin_top = 375.627
margin_right = 455.911
margin_bottom = 406.627
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Oh no
The lab is exploding"
align = 1
script = ExtResource( 8 )

[node name="oneway1" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 406.7, 359.3 )
script = ExtResource( 9 )

[node name="sprite" type="Sprite" parent="oneway1"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway1" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway6" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 406.131, 288.769 )
script = ExtResource( 10 )

[node name="sprite" type="Sprite" parent="oneway6"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway6" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway10" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 407.838, 218.806 )
script = ExtResource( 11 )

[node name="sprite" type="Sprite" parent="oneway10"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway10" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway2" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 423.7, 359.3 )
script = ExtResource( 12 )

[node name="sprite" type="Sprite" parent="oneway2"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway2" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway5" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 423.131, 288.769 )
script = ExtResource( 13 )

[node name="sprite" type="Sprite" parent="oneway5"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway5" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway3" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 409.3, 395.4 )
script = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="oneway3"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway3" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway7" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 408.731, 324.869 )
script = ExtResource( 15 )

[node name="sprite" type="Sprite" parent="oneway7"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway7" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway4" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 424.3, 395.4 )
script = ExtResource( 16 )

[node name="sprite" type="Sprite" parent="oneway4"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway4" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway8" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 423.731, 324.869 )
script = ExtResource( 17 )

[node name="sprite" type="Sprite" parent="oneway8"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway8" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway12" type="KinematicBody2D" parent="." groups=[
"reset",
"ladder1",
]]
editor/display_folded = true
visible = false
position = Vector2( 425.438, 254.906 )
script = ExtResource( 18 )

[node name="sprite" type="Sprite" parent="oneway12"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway12" groups=[
"ladder1",
]]
shape = SubResource( 7 )
disabled = true
one_way_collision = true

[node name="oneway13" type="KinematicBody2D" parent="." groups=[
"reset",
"door1",
]]
editor/display_folded = true
position = Vector2( 377.658, 329.988 )
rotation = 1.56908
script = ExtResource( 19 )

[node name="sprite" type="Sprite" parent="oneway13"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway13" groups=[
"door1",
]]
shape = SubResource( 7 )
one_way_collision = true

[node name="oneway15" type="KinematicBody2D" parent="." groups=[
"reset",
"door2",
]]
editor/display_folded = true
position = Vector2( 456.722, 328.281 )
rotation = 4.70051
script = ExtResource( 20 )

[node name="sprite" type="Sprite" parent="oneway15"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway15" groups=[
"door2",
]]
shape = SubResource( 7 )
one_way_collision = true

[node name="oneway14" type="KinematicBody2D" parent="." groups=[
"reset",
"door1",
]]
editor/display_folded = true
position = Vector2( 377.089, 314.061 )
rotation = 1.56908
script = ExtResource( 21 )

[node name="sprite" type="Sprite" parent="oneway14"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway14" groups=[
"door1",
]]
shape = SubResource( 7 )
one_way_collision = true

[node name="oneway16" type="KinematicBody2D" parent="." groups=[
"reset",
"door2",
]]
editor/display_folded = true
position = Vector2( 456.153, 312.355 )
rotation = 4.70051
script = ExtResource( 22 )

[node name="sprite" type="Sprite" parent="oneway16"]
scale = Vector2( 1, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="oneway16" groups=[
"door2",
]]
shape = SubResource( 7 )
one_way_collision = true
[connection signal="body_entered" from="princess" to="." method="_on_princess_body_enter"]
[connection signal="body_entered" from="button2" to="." method="_on_button2_body_entered"]
[connection signal="body_entered" from="button3" to="." method="_on_button3_body_entered"]
[connection signal="body_entered" from="button1" to="." method="_on_button1_body_entered"]
